--- a/frontend/police-system/package.json
+++ b/frontend/police-system/package.json
@@ -6,13 +6,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.1.1",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "mdb-ui-kit": "^4.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.32.0",
     "react-router": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "recoil": "^0.7.3",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
